# c_game

./: CMakeLists.txt  project.4coder
CGame/: CMakeLists.txt  main.c
CGame/Renderer/: RendererContext.c  RendererContext.h
CGame/Window/: Win32Window.c  Win32Window.h
